# Taller1ED

./: CMakeLists.txt  Taller1ED.sln
Taller1ED/: NodoZapato.cpp  NodoZapato.h  Sistema.cpp  Test.vcxproj  Test.vcxproj.filters  Zapato.cpp  Zapato.h  bodega.csv  bodega.xlsx  estanteria.cpp  estanteria.h  main.cpp  sistema.h  stock.csv  stock.xlsx
Taller1ED/x64/Debug/: vc143.idb
Taller1ED/x64/Debug/Taller1ED.tlog/: Taller1ED.lastbuildstate
